face_detection[Only-U] (add .gitignore, modify env for anaconda) by kt.kim

--- a/pytorch_version/face_detection/.gitignore
+++ b/pytorch_version/face_detection/.gitignore
@@ -208,6 +208,8 @@ pre_trained/
 samples
 samples/*
 model_inference.py
+model_train.py
 models/builder.py
 models/detector.py
 models/detector_v1_older.py
+results
